--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ homepage = "https://github.com/searby-rs/externcfn"
 version = "1.0.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib", "staticlib"]
+
 [dependencies]
