--- a/externcfn-attr/Cargo.toml
+++ b/externcfn-attr/Cargo.toml
@@ -11,4 +11,4 @@ edition.workspace = true
 [dependencies]
 proc-macro2 = "1.0.88"
 quote = "1.0.37"
-syn = "2.0.82"
+syn = { version = "2.0.82", features = ["full"] }
